fixed "hackers" layout on Safari

--- a/src/components/Hacker/hacker.css
+++ b/src/components/Hacker/hacker.css
@@ -1,7 +1,7 @@
 .hacker {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 12px;
     padding: 12px;
     min-height: 60px;
@@ -20,9 +20,9 @@
 }
 
 .avatar {
-    flex: 1 1;
+    flex: 0 0 60px;
 }
 .name {
-    flex: 1 85%;
+    flex: 1 0;
     align-items: center;
 }
